src/assets/css/_global.css
/*
 * Copyright 2026 Adobe. All rights reserved.
 * 
 * This file is licensed to you under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License. You may obtain a copy
 * of the License at <http://www.apache.org/licenses/LICENSE-2.0>
 * 
 * Unless required by applicable law or agreed to in writing, software distributed under
 * the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR REPRESENTATIONS
 * OF ANY KIND, either express or implied. See the License for the specific language
 * governing permissions and limitations under the License.
 */

body {
  min-block-size: 100vb;
  display: grid;
  grid-template-areas: 'nav' 'header' 'main' 'footer';
  grid-template-rows: auto auto 1fr auto;
  align-items: start;
}

nav {
  grid-area: nav;
}

header {
  grid-area: header;
}

main {
  grid-area: main;

  margin-block: max(8vh, var(--spectrum-spacing-400));
}

footer {
  grid-area: footer;
}

